--- a/package.json
+++ b/package.json
@@ -10,26 +10,37 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@paypal/react-paypal-js": "^8.9.2",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
     "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "flowbite": "^4.0.1",
+    "framer-motion": "^12.23.24",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-apexcharts": "^1.8.0",
+    "react-chartjs-2": "^5.3.1",
+    "react-datepicker": "^8.10.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-router-dom": "^7.9.6",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
