--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://zeeshannazir042.github.io/jobperhour",
+  "homepage": "https://zeeshannazir042.github.io/jobperhour/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
