--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "flowbite": "^4.0.1",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.26",
     "i18next": "^25.7.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-apexcharts": "^1.8.0",
@@ -39,6 +40,7 @@
     "react-router-dom": "^7.9.6",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.5.1",
     "slick-carousel": "^1.8.1",
     "yup": "^1.7.1"
   },
